# tashkeelagent

./: .gitignore  README.md  pyproject.toml
src/: tashkeel_agent.py
src/my_agents/: tashkeel_agent.py
src/utils/: __init__.py
tests/: test_main.py
